--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "vue": "2.5.17",
+    "vue-class-component": "^6.3.2",
+    "vue-property-decorator": "^7.3.0",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
@@ -63,6 +65,11 @@
     "shelljs": "0.8.2",
     "svg-sprite-loader": "3.8.0",
     "svgo": "1.0.5",
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.12.1",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.3.3",
     "uglifyjs-webpack-plugin": "1.2.7",
     "url-loader": "1.0.1",
     "vue-loader": "15.3.0",
